--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,20 @@
     font-family: Montserrat, Arial, sans-serif;
     color: #2C4674;
 }
+html {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+body {
+    max-width: 414px;
+    max-height: 800px;
+    margin: auto;
+}
 .home {
     background: linear-gradient(to bottom, #C8DAFF, #2C4674);
-    min-height: 100vh;
+    min-height: 100%;
     text-align: center;
     display: grid;
     grid-template-rows: 1fr auto;
@@ -105,7 +116,7 @@
 }
 
 .search {
-    min-height: 100vh;
+    min-height: 100%;
     padding: 50px 22px;
     border-radius: 40px;
     overflow: hidden;
@@ -235,7 +246,6 @@
     background: #FFFFFF;
     border-radius: 50%;
     transform: scale(0);
-    filter: blur(40px);
 }
 .search-card-img:not(:hover) img {
     transform: translateY(6%);
@@ -292,7 +302,7 @@
 .card {
     border-radius: 30px;
     overflow: hidden;
-    min-height: 100vh;
+    min-height: 100%;
 }
 .card.cat-page {
     background: #E8DBD4;
@@ -414,7 +424,7 @@ label {
     top: 0;
     right: 0;
     left: 0;
-    height: 100vh;
+    height: 100%;
     background: linear-gradient(to bottom, #FFFFFF, rgba(255, 255, 255, .8));
     border-radius: 40px;
     border: 2px solid #2C4674;
